--- a/index.html
+++ b/index.html
@@ -163,6 +163,11 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+                          <li> <b> [2022-12]</b> Our survey on
+                            DAG-based Blockchains has been accepted
+                            for publication in <b>ACM Computing
+                            Surveys</b>. </li>
+
                           <li><b> [2022-12]</b> Our work on "BlindHub:
              Bitcoin-Compatible Privacy-Preserving Payment Channel
              Hubs Supporting Variable Amounts" has been accepted for
@@ -626,6 +631,16 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
 <br>
 	                    <li><b>Journal:</b><br>
                               <ol type="1" start = "2">
+                                <li>
+                                  Qin Wang, Jiangshan Yu, Shiping
+                                  Chen, and Yang Xiang. <br>
+                                  <b>
+                                    SoK: Diving into DAG-based
+                                    Blockchain Systems
+                                  </b>
+                                  <br> <i><b>ACM Computing Surveys</b></i>,
+                                  2023.
+                                </li>
                                 <li>
                                   Maxime Buser, Rafael Dowsley,
                                   Muhammed Esgin, Clémentine Gritti,
