--- a/index.html
+++ b/index.html
@@ -1052,8 +1052,40 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
         </div>
         <br>
         <div class="col-lg-offset-0"><br><br>
-          <font size="5"><b>Master students (minor thesis):</b></font><br><br>
-          <font size="4">
+          <font size="5"><b>PhD students:</b></font><br><br>
+          <font size="4"><b>Main supervision</b><br>
+          <ol type="circle">
+	    <!-- <li>Tong Cao (Feb.2018-), University of Luxembourg. (Co-supervised with Prof. Paulo Verissimo)</li> -->
+            <!-- <li>Runchao Han (Feb.2019-), Monash University. </li> -->
+            <li>Joao Otavio Massari Chervinski (Oct.2019-), Monash University.</li>
+	    <li>Shange Fu (Oct.2019-), Monash University.</li>
+            <li>Zhimei Sui (Nov.2019-), Monash University.</li>
+            <li>Liangrong Zhao (March 2021-), Monash University.</li>
+            <li>Yuanzhe Zhang (June 2021-), Monash University.</li>
+            <li>Hans Schmiedel (Nov. 2021-), Monash University.</li>
+          </ol>
+          <font size="4"><b>Co-supervision</b><br>
+          <ol type="circle">
+            <li>Arash Mirzaei (July 2019-), Monash University. (Co-supervised with Amin Sakzad)</li>
+            <li>Kassem Bagher (Dec. 2019), Monash University. (Co-supervised with Xingliang Yuan)</li>
+            <li>Chaochen Shi (Jan.2020-), Deakin University. (Co-supervised with Prof. Yong Xiang)</li>
+            <li>Sina Aeeneh (July 2020-), Monash University. (Faculty of Engineering, Co-supervised with Nikola Zlatanov)</li>
+            <li>Peter Ince (Aug. 2021-), Monash University. (Co-supervised with Joseph Liu)</li>
+            <li>Zoey Ziyi Li (Oct. 2021-), Monash University. (Co-supervised with Joseph Liu)</li>
+            <li>Dabao Wang (Jan. 2022-), Monash University. (Co-supervised with Xingliang Yuan)</li>
+            <li>Jun Zhao (May. 2022-), Monash University. (Co-supervised with Joseph Liu and Xingliang Yuan)</li>
+          </ol></font>
+
+          <br>
+
+          <font size="5"><b>Alums:</b></font><br><br>
+          <font size="4"><b>PhD</b><br>
+          <ol type="circle">
+	    <li>Tong Cao (2018-2021), University of Luxembourg. (Co-supervised with Prof. Paulo Verissimo. Now: Lead Researcher@Kunyao Academy.)</li>
+            <li>Runchao Han (2019-2022), Monash University. (Now: Senior Research Engineer@Babylon.)</li>
+            <li>Jiachi Chen (2019-2022), Monash University. (Co-supervised with Prof.John Grundy and Dr.Xin Xia. Now Assistant Professor@Sun Yat-Sen University)
+          </ol>
+          <font size="4"><b>Master (minor thesis)</b><br>
           <ol type="circle">
             <li>
               Ran An (2019), "Analysis of stablecoins in blockchain",
@@ -1080,32 +1112,16 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
             <li>
               Lianyang Yu (2020), "Game theoretic analysis on
               reputation concept in blockchain security", Monash
-              University.
+              University. (Now a PhD student at The University of Queensland)
             </li>
             <li>
               Yu Xia (2020), "Formal analysis and verification of the
               RepuCoin system", Monash University. (Co-supervised with
               Vincent Rahli.)
             </li>
-          </ol></font>
+          </ol>
+          </font>
 
-          <font size="5"><b>PhD students:</b></font><br><br>
-          <font size="4">
-          <ol type="circle">
-	    <li>Tong Cao (Feb.2018-), University of Luxembourg. (Co-supervised with Prof. Paulo Verissimo)</li>
-            <li>Runchao Han (Feb.2019-), Monash University. </li>
-            <li>Arash Mirzaei (July 2019-), Monash University. (Co-supervised with Amin Sakzad)</li>
-	    <li>Joao Otavio Massari Chervinski (Oct.2019-), Monash University.</li>
-	    <li>Shange Fu (Oct.2019-), Monash University.</li>
-            <li>Zhimei Sui (Nov.2019-), Monash University.</li>
-            <li>Chaochen Shi (Jan.2020-), Deakin University. (Co-supervised with Prof. Yong Xiang)</li>
-            <li>Sina Aeeneh (July 2020-), Monash University. (Faculty of Engineering, Co-supervised with Nikola Zlatanov)</li>
-            <li>Liangrong Zhao (March 2021-), Monash University.</li>
-            <li>Yuanzhe Zhang (June 2021-), Monash University.</li>
-            <li>Peter Ince (Aug. 2021-), Monash University. (Co-supervised with Joseph Liu)</li>
-            <li>Zoey Ziyi Li (Oct. 2021-), Monash University. (Co-supervised with Joseph Liu)</li>
-            <li>Hans Schmiedel (Nov. 2021-), Monash University.</li>
-          </ol></font>
 <br>
           <font size="5"><b>Visitors:</b></font><br><br>
           <font size="4">
