--- a/index.html
+++ b/index.html
@@ -1178,7 +1178,7 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                               </ul><br>
                             <li><b>Conference Program Committee Member</b></li>
                             <b>2023</b>
-                            <ul type="circle">
+                            <ol>
                               <li>
                                 The 53rd Annual IEEE/IFIP
                                 International Conference on Dependable
@@ -1189,9 +1189,9 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                 on Distributed Computing
                                 Systems <b>(ICDCS)</b>
                               </li>
-                            </ul>
+                            </ol>
                             <b>2022</b>
-                            <ul type="circle">
+                            <ol>
                               <li>
                                 The 52nd Annual IEEE/IFIP
                                 International Conference on Dependable
@@ -1213,9 +1213,9 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                 on Trust, Security and Privacy in
                                 Computing and
                                 Communications <b>(TrustCom)</b> </li>
-                            </ul>
+                            </ol>
                             <b>2021</b>
-                            <ul type="circle">
+                            <ol>
                               <li>
                                 The 51st Annual IEEE/IFIP
                                 International Conference on Dependable
@@ -1248,9 +1248,9 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                 Blockchain Technology and Emerging
                                 Applications <b>(BlockTEA)</b>
                               </li>
-                            </ul>
+                            </ol>
                               <b>2020</b>
-                              <ul type="circle">
+                              <ol>
 
                               <li>
                                 The 2nd ACM Advances in Financial Technologies <b>(AFT)</b>
@@ -1277,9 +1277,9 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                               </li>
                               <li>The 14th International Conference on Network and System Security <b>(NSS)</b></li>
 
-                            </ul>
+                            </ol>
                             <b>2019</b>
-                            <ul type="circle">
+                            <ol>
                                 <li>
                                 The 38th IEEE International Symposium on
                                 Reliable Distributed
@@ -1308,9 +1308,9 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                    (NSS)
                                    </b>
                                 </li>
-                              </ul>
+                              </ol>
                               <b>2018</b>
-                              <ul type="circle">
+                              <ol>
                               <li>
                                 IEEE Global Communications
                                 Conference
@@ -1327,18 +1327,18 @@ EurekAlert!, The US Breaking news, Homeland Security Today,</i> etc.<br><br>
                                 International Conference on
                                 Communications <b>(ICC)</b>
                               </li>
-                              </ul>
+                              </ol>
                             <b>2017</b>
-                              <ul type="circle">
+                              <ol>
                               <li> International Conference on
                                   Information Security Practice and
                                   Experience <b>(ISPEC)</b>
                               </li>
-                              </ul>
-                              <b>2016</b>
-                              <ul type="circle">
-	                      <li>Software Architecture for Big Data and the Cloud, 2016.</li>
-                            </ul>
+                              </ol>
+                            <!--   <b>2016</b> -->
+                            <!--   <ol> -->
+	                    <!--   <li>Software Architecture for Big Data and the Cloud, 2016.</li> -->
+                            <!-- </ol> -->
                             <br>
 
 	                    <li><b>Invited Reviewer (Selected Journal):</b><br>
