--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@ Today,</i> etc.
                             Traverse, techilive,</font></i> etc.
                             <br><b>[2020]</b> About Atomic swap and blockchain interoperability (AFT'19).
                             Fairness in cryptocurrency exchanges --- <i><font color="blue">CryptoNews</font></i>
-                            <br><b>[2020]</b> About a serious of works on
+                            <br><b>[2020]</b> About a series of works on
                           user privacy and anti-money laundering
                           (2*ICBC'21, FC'20, CSF'19, FC'19 and
                           AsiaCCS'19). A toolkit to help trace
