--- a/index.html
+++ b/index.html
@@ -164,15 +164,18 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+                          <li> <b> [2023-01]</b> Two papers accepted
+                            at <b>FC'23</b>, congrats Runchao Han and
+                            Tong Cao!  </li>
                           <li> <b> [2022-12]</b> Our survey on
                             DAG-based Blockchains has been accepted
                             for publication in <b>ACM Computing
                             Surveys</b>. </li>
-
                           <li><b> [2022-12]</b> Our work on "BlindHub:
-             Bitcoin-Compatible Privacy-Preserving Payment Channel
-             Hubs Supporting Variable Amounts" has been accepted for
-             publication at <b>IEEE S&P'23</b>!</li>
+                              Bitcoin-Compatible Privacy-Preserving
+                              Payment Channel Hubs Supporting Variable
+                              Amounts" has been accepted for
+                              publication at <b>IEEE S&P'23</b>!</li>
                           <li><b> [2022-12]</b> Our work on blockchain
                             for education received <b>best paper
                               award</b> at <b>NSS'22</b>. Congrats Zoey!</li>
@@ -621,6 +624,8 @@ Today,</i> etc.
                               <a href="doc/publication.html">[Full list]</a> &nbsp;
                               <a href="https://scholar.google.co.uk/citations?user=-1C1IIcAAAAJ&hl=en"> [Google scholar]</a>&nbsp; 
                               <a href="http://dblp.uni-trier.de/pers/hd/y/Yu:Jiangshan">[DBLP]</a></b><br>
+                            <br> <b>[FC'23]</b> "Fair Delivery of Decentralised Randomness Beacon"
+                            <br> <b>[FC'23]</b> "Leveraging the Verifier’s Dilemma to Double Spend in Bitcoin"
                             <br> <b>[IEEE S&P'23]</b> "BlindHub: Bitcoin-Compatible Privacy-Preserving Payment Channel Hubs Supporting Variable Amounts"
                             <br> <b>[IEEE ICDE'23]</b> "TxAllo: Dynamic Transaction Allocation in Sharded Blockchain Systems"
                             <br> <b>[ACM computing surveys'23]</b>      "A Survey on Exotic Signatures for Post-Quantum Blockchain: Challenges & Research Directions"
