--- a/index.html
+++ b/index.html
@@ -709,6 +709,14 @@ Today,</i> etc.
                      hr_gray"/><span class="txt_darkgrey">My Team</span>
           <hr class="team_hr team_hr_right hr_gray" /><br>
         </div>
+                <div class="col-lg-offset-0"><br><br>
+          <font size="5"><b>Research Fellows:</b></font><br><br>
+                    <font size="4">
+                    <ol type="circle">
+                      <li>Diego Kreutz (Jan. 2023-), Monash University.</li>
+                    </ol>
+                    </font>
+                </div>
         <br>
         <div class="col-lg-offset-0"><br><br>
           <font size="5"><b>PhD students:</b></font><br><br>
@@ -1184,7 +1192,7 @@ Today,</i> etc.
                                 on Distributed Computing
                                 Systems <b>(ICDCS)</b>
                               </li>
-                              <!-- <li>The 20th Annual International Conference on Privacy, Security, and Trust <b>(PST)</b></li> -->
+                              <li>The 20th Annual International Conference on Privacy, Security, and Trust <b>(PST)</b></li>
                             </ol>
                             <b>2022</b>
                             <ol>
