--- a/index.html
+++ b/index.html
@@ -712,13 +712,13 @@ Today,</i> etc.
                 <div class="col-lg-offset-0"><br><br>
           <font size="5"><b>Research Fellows:</b></font><br><br>
                     <font size="4">
-                    <ol type="circle">
+                    <ul type="circle">
                       <li>Diego Kreutz (Jan. 2023-), Monash University.</li>
                     </ol>
                     </font>
                 </div>
         <br>
-        <div class="col-lg-offset-0"><br><br>
+        <div class="col-lg-offset-0">
           <font size="5"><b>PhD students:</b></font><br><br>
           <font size="4"><b>Main supervision</b><br>
           <ol type="circle">
