ifip WG meeting

--- a/index.html
+++ b/index.html
@@ -1161,19 +1161,20 @@ Today,</i> etc.
 
                             <li><b>Conference (Co-)Chair</b></li>
                             <ul type="circle">
-                              <li> General Chair, 83rd Meeting of the
-                                IFIP WG 10.4, 2023.</li>
+                              <li> PC Co-Chair and General Co-Chair,
+                                83rd Meeting of the IFIP WG 10.4 - the
+                                Future of Blockchains, 2023.</li>
                               <li> Publicity Co-Chair, EAI BlockTEA 2022.</li>
                               <li> Publicity Co-Chair, IEEE Blockchain 2021.</li>
                               <li> Publicity Co-Chair, IEEE GreenCom 2021.</li>
                               <li> Publicity Co-Chair, EAI BlockTEA 2021.</li>
                               <li> Publication Chair, ProvSec 2019.</li>
                               <li> PC Co-Chair,
-                                <a href="http://webhost.laas.fr/TSF/IFIPWG/Workshops&Meetings/74/index.htm">74th Meeting of the IFIP WG
-                                10.4 - Technological and societal
-                                challenges to blockchain dependability
-                                and security</a>, Clervaux, Luxembourg,
-                                2018.</li>
+                                <a href="http://webhost.laas.fr/TSF/IFIPWG/Workshops&Meetings/74/index.htm">74th
+                                Meeting of the IFIP WG 10.4 -
+                                Technological and societal challenges
+                                to blockchain dependability and
+                                security</a>, 2018.</li>
                               <li>PC Co-Chair,
                                   <a href="https://blockchainbirmingham.wordpress.com/">
                                   Workshop on BlockChain
