--- a/index.html
+++ b/index.html
@@ -1194,6 +1194,7 @@ Today,</i> etc.
                                 Systems <b>(ICDCS)</b>
                               </li>
                               <li>The 20th Annual International Conference on Privacy, Security, and Trust <b>(PST)</b></li>
+                              <li><a href="https://research.protocol.ai/sites/consensusday23/">ConsensusDay</a></li>
                             </ol>
                             <b>2022</b>
                             <ol>
