--- a/index.html
+++ b/index.html
@@ -164,6 +164,11 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+                           <li> <b> [2023-02]</b> I'm delighted to
+                            serve as a PC member
+                            for <b>
+                               <a href="https://research.protocol.ai/sites/consensusday23/">ConsensusDay'23'</a>
+                             </b>. Please submit your good works!</li>
                           <li> <b> [2023-01]</b> Two papers accepted
                             at <b>FC'23</b>, congrats Runchao Han and
                             Tong Cao!  </li>
