--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@ http://www.templatemo.com/tm-395-urbanic
                         <p> Dr. Jiangshan Yu is a 2021 ARC DECRA
                            Fellow and Senior Lecturer (~US Associate
                            Professor) at Monash University. He also
-                           serves as Associate Director (Research) at
-                           Monash Blockchain Technology Centre.
+                           serves as Research Director at Monash
+                           Blockchain Technology Centre.
 
                         He received his PhD in Computer Science from
                       the University of Birmingham (UK), supervised
