--- a/index.html
+++ b/index.html
@@ -122,16 +122,22 @@ http://www.templatemo.com/tm-395-urbanic
                           IFIP Working Group 10.4<br>
                           Scientific Advisory Board, Austrian Blockchain Center<br>
                           <br>
-                          Monash Blockchain Technology Centre<br>
+
+                          Research Director, Monash Blockchain Technology Centre<br>
+                          Deputy Director, Algorand Centre of Excellence (ACE-SIP)<br>
                           Department of Software Systems and Cybersecurity<br>
-                          Monash University, Australia.</b></font>
+                          Monash University, Australia.</b>
+                      </font>
                       </p>
                     <div class="col-lg-offset-4 JYuinfo_right"><font size="4">
                         <p> Dr. Jiangshan Yu is a 2021 ARC DECRA
                            Fellow and Senior Lecturer (~US Associate
-                           Professor) at Monash University. He also
-                           serves as Research Director at Monash
-                           Blockchain Technology Centre.
+                           Professor) at Monash University. He serves
+                           as Research Director at Monash Blockchain
+                           Technology Centre, and Deputy Director and
+                           Lead of Research Cluster at Algorand Centre
+                           of Excellence on Sustainability Informatics
+                           for the Pacific (ACE-SIP).
 
                         He received his PhD in Computer Science from
                       the University of Birmingham (UK), supervised
@@ -167,7 +173,9 @@ http://www.templatemo.com/tm-395-urbanic
                            <li> <b> [2023-02]</b> I'm delighted to
                             serve as a PC member
                             for <b>
-                               <a href="https://research.protocol.ai/sites/consensusday23/">ConsensusDay'23'</a>
+                               <a href="https://research.protocol.ai/sites/consensusday23/">
+                                 ConsensusDay'23
+                               </a>
                              </b>. Please submit your good works!</li>
                           <li> <b> [2023-01]</b> Two papers accepted
                             at <b>FC'23</b>, congrats Runchao Han and
@@ -1150,8 +1158,23 @@ Today,</i> etc.
                     <font size="5"><b> Service at Monash:
                     </b></font><br><br><font size="4">
                       <ul type="circle">
-                        <li>Associate Director (Research), <a href="https://www.monash.edu/blockchain">Monash Blockchain Technology Centre</a>. (January 2020 - present)</li>
-                        <li>Engagement Coordinator (Deputy Director), <a href="https://www.monash.edu/it/ssc">Department of Software Systems and Cybersecurity</a>. (April 2020 - December 2020)</li>
+                        <li>[2022 - present] Deputy Director and Lead
+                          of Research
+                          Cluster, <a href="https://ace-sip.org">Algorand
+                          Centre of Excellence on Sustainability
+                          Informatics for the Pacific (ACE-SIP)</a>
+                        </li>
+                        <li>
+                          [2020 - present] Research
+                          Director, <a href="https://www.monash.edu/blockchain">Monash
+                          Blockchain Technology Centre</a>.
+                        </li>
+                        <li>
+                          [2020] Engagement Coordinator (Deputy
+                          Director), <a href="https://www.monash.edu/it/ssc">Department
+                          of Software Systems and
+                          Cybersecurity</a>.
+                        </li>
                         <!-- <li>Media Spokesperson, <a href="https://www.monash.edu/it">Faculty of Information Technology</a>. (June.2019 - present) </li> -->
                     </ul><br>
 
