--- a/index.html
+++ b/index.html
@@ -846,6 +846,7 @@ Today,</i> etc.
                                     6px">
               <li><b>Awards:</b><br>
 	        <ul type="circle">
+                  <li><b>Research Talent Accelerator Award</b>, Monash University, 2023.</li>
                   <li>
                     <b>Best Paper Award</b> at NSS 2022.
                   </li>
@@ -859,8 +860,7 @@ Today,</i> etc.
                   <li> <b>IBM Academic Award</b>, 2020. (Covered by <a href="https://www.monash.edu/it/about-us/news-and-events/latest/articles/2020/monash-blockchain-expert-awarded-prestigious-ibm-academic-award">Monash News</a> and <a href="https://cryptonews.com.au/monash-blockchain-expert-awarded-prestigious-ibm-academic-award">Crypto News</a>.)</li> 
                   <li> <b>Dean's Award for
                       Excellence in Research Impact
-                    </b>, Monash university, Australia,
-                                  2019. </li>
+                    </b>, Monash university, 2019. </li>
 
                   <li> <b>Finalist (Technology
                       Application) for Endeavour
