--- a/index.html
+++ b/index.html
@@ -170,6 +170,15 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+                          <li><b>[2023-02]</b> I'm delighted to serve
+                          as a Chair for <i>ACE Working Group on
+                          Sustainability and Social Impact</i>. ACE
+                          working groups are established as a joint
+                          force consisting of field experts from the
+                          ten
+                          global <a href="https://www.algorand.foundation/ace">Algorand
+                          Centres of Excellence</a>.
+                          </li>
                            <li> <b> [2023-02]</b> I'm delighted to
                             serve as a PC member
                             for <b>
@@ -1182,7 +1191,15 @@ Today,</i> etc.
                     </b></font><br><br><font size="4">
 	                  <ul type="disc"; style="margin-bottom:
                                                   6px">
-	                    <li><b>Journal editorship:</b></li>
+
+	                    <li><b>Membership and direction of organisations:</b></li>
+	                      <ul type="circle">
+                                <li>[2023-present] Chair, ACE Working Group on Sustainability and Social Impact.</li>
+                                <li>[2022-present] Elected Member, IFIP Working Group 10.4 on Dependable Computing and Fault Tolerance</li>
+                                <li>[2021-present] Scientific Advisory Board, Austrian Blockchain Center, Austria.</li>
+                              </ul><br>
+
+                            <li><b>Journal editorship:</b></li>
 	                      <ul type="circle">
                                 <li>Associate Editor, International Journal of Blockchain Applications and Secure Computing <b>(IJBASC)</b></li>
                             </ul><br>
