update service role

--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@ http://www.templatemo.com/tm-395-urbanic
                            Fellow and Senior Lecturer (~US Associate
                            Professor) at Monash University. He serves
                            as Research Director at Monash Blockchain
-                           Technology Centre, and Deputy Director and
-                           Lead of Research Cluster at Algorand Centre
-                           of Excellence on Sustainability Informatics
-                           for the Pacific (ACE-SIP).
+                           Technology Centre, and Deputy Director at
+                           Algorand Centre of Excellence on
+                           Sustainability Informatics for the Pacific
+                           (ACE-SIP).
 
                         He received his PhD in Computer Science from
                       the University of Birmingham (UK), supervised
@@ -1167,9 +1167,8 @@ Today,</i> etc.
                     <font size="5"><b> Service at Monash:
                     </b></font><br><br><font size="4">
                       <ul type="circle">
-                        <li>[2022 - present] Deputy Director and Lead
-                          of Research
-                          Cluster, <a href="https://ace-sip.org">Algorand
+                        <li>[2022 - present] Deputy
+                          Director, <a href="https://ace-sip.org">Algorand
                           Centre of Excellence on Sustainability
                           Informatics for the Pacific (ACE-SIP)</a>
                         </li>
