--- a/index.html
+++ b/index.html
@@ -170,6 +170,9 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+                          <li> <b> [2023-02]</b> I'm delighted to
+                            serve as a PC member
+                            for <b>VLDB'24</b>.</li>
                           <li><b>[2023-02]</b> I'm delighted to serve
                           as a Chair for <i>ACE Working Group on
                           Sustainability and Social Impact</i>. ACE
@@ -1225,6 +1228,12 @@ Today,</i> etc.
                                 </a>, Birmingham, United Kingdom, 2015.</li>
                               </ul><br>
                             <li><b>Conference Program Committee Member</b></li>
+                            <b>2024</b>
+                            <ol>
+                              <li>
+                                The 50th International Conference on Very Large Data Bases <b>(VLDB)</b>
+                              </li>
+                            </ol>
                             <b>2023</b>
                             <ol>
                               <li>
