--- a/index.html
+++ b/index.html
@@ -170,6 +170,11 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+                          <li> <b> [2023-03]</b> Our paper on
+                            "Analyzing the Performance of the
+                            Inter-Blockchain Communication Protocol"
+                            has been accepted for publication
+                            at <b>DSN'23</b>, congrats Joao!  </li>
                           <li> <b> [2023-02]</b> I'm delighted to
                             serve as a PC member
                             for <b>VLDB'24</b>.</li>
@@ -649,6 +654,7 @@ Today,</i> etc.
                               <a href="doc/publication.html">[Full list]</a> &nbsp;
                               <a href="https://scholar.google.co.uk/citations?user=-1C1IIcAAAAJ&hl=en"> [Google scholar]</a>&nbsp; 
                               <a href="http://dblp.uni-trier.de/pers/hd/y/Yu:Jiangshan">[DBLP]</a></b><br>
+                            <br> <b>[DSN'23]</b> "Analyzing the Performance of the Inter-Blockchain Communication Protocol"
                             <br> <b>[FC'23]</b> "Fair Delivery of Decentralised Randomness Beacon"
                             <br> <b>[FC'23]</b> "Leveraging the Verifier’s Dilemma to Double Spend in Bitcoin"
                             <br> <b>[IEEE S&P'23]</b> "BlindHub: Bitcoin-Compatible Privacy-Preserving Payment Channel Hubs Supporting Variable Amounts"
