--- a/index.html
+++ b/index.html
@@ -170,6 +170,13 @@ http://www.templatemo.com/tm-395-urbanic
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
                         <div style="height:9cm; overflow:auto">
+                          <li>
+                            <b> [2023-04]</b> My paper on "Fault
+                            Independence in Blockchain" has been
+                            accepted for publication
+                            at <b><a href="https://dsn2023.dei.uc.pt/calls_cfp-disrupt.html">Disrupt
+                            Track</a></b> of <b>DSN'23</b>!
+                          </li>
                           <li> <b> [2023-03]</b> Our paper on
                             "Analyzing the Performance of the
                             Inter-Blockchain Communication Protocol"
@@ -654,6 +661,7 @@ Today,</i> etc.
                               <a href="doc/publication.html">[Full list]</a> &nbsp;
                               <a href="https://scholar.google.co.uk/citations?user=-1C1IIcAAAAJ&hl=en"> [Google scholar]</a>&nbsp; 
                               <a href="http://dblp.uni-trier.de/pers/hd/y/Yu:Jiangshan">[DBLP]</a></b><br>
+                            <br> <b>[DSN-Disrupt'23]</b> "Fault Independence in Blockchain"
                             <br> <b>[DSN'23]</b> "Analyzing the Performance of the Inter-Blockchain Communication Protocol"
                             <br> <b>[FC'23]</b> "Fair Delivery of Decentralised Randomness Beacon"
                             <br> <b>[FC'23]</b> "Leveraging the Verifier’s Dilemma to Double Spend in Bitcoin"
