--- a/index.html
+++ b/index.html
@@ -124,7 +124,6 @@ http://www.templatemo.com/tm-395-urbanic
                           <br>
 
                           Research Director, Monash Blockchain Technology Centre<br>
-                          Deputy Director, Algorand Centre of Excellence (ACE-SIP)<br>
                           Department of Software Systems and Cybersecurity<br>
                           Monash University, Australia.</b>
                       </font>
@@ -134,10 +133,7 @@ http://www.templatemo.com/tm-395-urbanic
                            Fellow and Senior Lecturer (~US Associate
                            Professor) at Monash University. He serves
                            as Research Director at Monash Blockchain
-                           Technology Centre, and Deputy Director at
-                           Algorand Centre of Excellence on
-                           Sustainability Informatics for the Pacific
-                           (ACE-SIP).
+                           Technology Centre.
 
                         He received his PhD in Computer Science from
                       the University of Birmingham (UK), supervised
@@ -929,7 +925,7 @@ Today,</i> etc.
                     [2022-2027] Algorand Centre of
                     Excellence. "Sustainability Informatics for the
                     Pacific", A$8.68M. [Lead CI on the Research
-                    Cluster]
+                    Cluster, Deputy Director of the Centre.]
                   </li>
 
                   <li>
