update on Arash

--- a/index.html
+++ b/index.html
@@ -768,7 +768,6 @@ Today,</i> etc.
           </ol>
           <font size="4"><b>Co-supervision</b><br>
           <ol type="circle">
-            <li>Arash Mirzaei (July 2019-), Monash University. (Co-supervised with Amin Sakzad)</li>
             <li>Kassem Bagher (Dec. 2019), Monash University. (Co-supervised with Xingliang Yuan)</li>
             <li>Chaochen Shi (Jan.2020-), Deakin University. (Co-supervised with Prof. Yong Xiang)</li>
             <li>Sina Aeeneh (July 2020-), Monash University. (Faculty of Engineering, Co-supervised with Nikola Zlatanov)</li>
@@ -785,36 +784,47 @@ Today,</i> etc.
           <ol type="circle">
 	    <li>Tong Cao (2018-2021), University of Luxembourg. (Co-supervised with Prof. Paulo Verissimo. Now: Lead Researcher@Kunyao Academy.)</li>
             <li> <a href="https://runchao.rocks/">Runchao Han</a> (2019-2022), Monash University. (Now: Senior Research Engineer@Babylon.)</li>
-            <li> <a href="https://jiachi-chen.github.io">Jiachi Chen</a> (2019-2022), Monash University. (Co-supervised with Prof.John Grundy and Dr.Xin Xia. Now Assistant Professor@Sun Yat-Sen University)
+            <li>
+              <a href="https://jiachi-chen.github.io">Jiachi Chen</a>
+              (2019-2022), Monash University. (Co-supervised with
+              Prof.John Grundy and Dr.Xin Xia. Now: Assistant
+              Professor@Sun Yat-Sen University)
+            </li>
+            <li>
+              Arash Mirzaei (2019-2023), Monash
+              University. (Co-supervised with Dr. Amin Sakzad and
+              A/P. Ron Steinfeld. Now: Postdoc at ANU.)
+            </li>
           </ol>
           <font size="4"><b>Master (minor thesis)</b><br>
           <ol type="circle">
             <li>
               Ran An (2019), "Analysis of stablecoins in blockchain",
-              Monash University. (Co-supervised with Joseph Liu). (Now
-              a PhD student at Monash University.)
+              Monash University. (Co-supervised with Joseph
+              Liu). (Followed by a PhD study at Monash University.)
             </li>
             <li>Xinyu Zhang (2019), "Revocable ring signature", Monash
-              University. (Co-supervised with Joseph Liu). (Now a PhD
-              student at Monash University.)</li>
+              University. (Co-supervised with Joseph Liu). (Followed
+              by a PhD study at Monash University.)</li>
 	    <li>Shaocong Yu (2019), "Traceability analysis of Monero using
               machine learning technology", Monash
               University. (Co-supervised with Joseph Liu and Lan
               Du).</li>
             <li>Jun Zhao (2019), "Consolidating Hash Power in
             Blockchain Shards with a Forest", Monash
-            University. (Co-supervised with Joseph Liu). (Now a PhD
-            student at Monash University.)</li>
+            University. (Co-supervised with Joseph Liu). (Followed by
+            a PhD study at Monash University.)</li>
 
 	    <li>
               Pranav Kulkarni (2020), "Exploring energy-efficient
-              RepuCoin", Monash University. (Now a PhD student at
+              RepuCoin", Monash University. (Followed by a PhD study at
               Monash University.)
             </li>
             <li>
               Lianyang Yu (2020), "Game theoretic analysis on
               reputation concept in blockchain security", Monash
-              University. (Now a PhD student at The University of Queensland)
+              University. (Followed by a PhD study at The University of
+              Queensland)
             </li>
             <li>
               Yu Xia (2020), "Formal analysis and verification of the
