--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@ http://www.templatemo.com/tm-395-urbanic
                       <p> <font size="4"> <b>Dr. Jiangshan Yu (于江山)</b></p>
                       <p><b>Senior Lecturer (<a href="https://en.wikipedia.org/wiki/Senior_lecturer">equiv.</a> Associate Professor in US)<br>
                           ARC DECRA Fellow <br>
+                          Monash Research Talent Accelerator (RTA) Fellow <br>
                           IFIP Working Group 10.4<br>
                           Scientific Advisory Board, Austrian Blockchain Center<br>
                           <br>
