--- a/index.html
+++ b/index.html
@@ -773,8 +773,8 @@ Today,</i> etc.
             <li>Kassem Bagher (Dec. 2019), Monash University. (Co-supervised with Xingliang Yuan)</li>
             <li>Chaochen Shi (Jan.2020-), Deakin University. (Co-supervised with Prof. Yong Xiang)</li>
             <li>Sina Aeeneh (July 2020-), Monash University. (Faculty of Engineering, Co-supervised with Nikola Zlatanov)</li>
-            <li>Peter Ince (Aug. 2021-), Monash University. (Co-supervised with Joseph Liu)</li>
-            <li>Zoey Ziyi Li (Oct. 2021-), Monash University. (Co-supervised with Joseph Liu)</li>
+            <li>Peter Ince (Aug. 2021-), Monash University. (Co-supervised with Joseph Liu and Xiaoning Du)</li>
+            <li>Zoey Ziyi Li (Oct. 2021-), Monash University. (Co-supervised with Joseph Liu and Dragan Gasevic)</li>
             <!-- <li>Dabao Wang (Jan. 2022-), Monash University. (Co-supervised with Xingliang Yuan)</li> -->
             <li>Jun Zhao (May. 2022-), Monash University. (Co-supervised with Joseph Liu and Xingliang Yuan)</li>
             <li>Dongkun Hou (May. 2023-), Monash University. (Co-supervised with Shujie Cui and Joseph Liu)</li>
