--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@ Today,</i> etc.
                           Cryptography, and User Privacy.
                             <br><br>
                             <b>What I have been working on recently...<br>
-                              <a href="doc/key_publication.html">[Selected list]</a> &nbsp;
+                              <!-- <a href="doc/key_publication.html">[Selected list]</a> &nbsp; -->
                               <a href="doc/publication.html">[Full list]</a> &nbsp;
                               <a href="https://scholar.google.co.uk/citations?user=-1C1IIcAAAAJ&hl=en"> [Google scholar]</a>&nbsp; 
                               <a href="http://dblp.uni-trier.de/pers/hd/y/Yu:Jiangshan">[DBLP]</a></b><br>
