--- a/index.html
+++ b/index.html
@@ -1231,11 +1231,19 @@ Today,</i> etc.
 
                             <li><b>Conference (Co-)Chair</b></li>
                             <ul type="circle">
+                              <li> Publicity Co-Chair. The 54th
+                                IEEE/IFIP International Conference on
+                                Dependable Systems and Networks (DSN),
+                                2024</li>
                               <li> PC Co-Chair and General Co-Chair,
                                 83rd Meeting of the IFIP WG 10.4 - the
                                 Future of Blockchains, 2023.</li>
+                              <li> Publication Co-Chair, BlockSys 2023.</li>
                               <li> Publicity Co-Chair, EAI BlockTEA 2022.</li>
                               <li> Publicity Co-Chair, IEEE Blockchain 2021.</li>
+                              <li> PC Co-Chair, Workshop on Blockchain
+                                Security, Application, and Performance
+                                (BSAP), IEEE Blockchain 2021.</li>
                               <li> Publicity Co-Chair, IEEE GreenCom 2021.</li>
                               <li> Publicity Co-Chair, EAI BlockTEA 2021.</li>
                               <li> Publication Chair, ProvSec 2019.</li>
