--- a/index.html
+++ b/index.html
@@ -982,7 +982,7 @@ Today,</i> etc.
                   <li>
                     [2021–2022] Industry Research Contract. "To
                     Develop a Sustainable and Green Blockchain
-                    Consensus", $500,625. [CI]
+                    Consensus", $500,625. [Lead CI]
                   </li>
 
                   <li>
